# mdfmcp

./: DEPLOYMENT.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/mdfmcp/: server.py
