[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdfmcp"
version = "0.1.0"
description = "MCP Server for ASAM MDF file analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "mdf", "automotive", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp[cli]>=1.4.0",
    "asammdf>=8.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mdfmcp = "mdfmcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/mdfmcp"
Repository = "https://github.com/yourusername/mdfmcp"
Issues = "https://github.com/yourusername/mdfmcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mdfmcp"]